--- a/app/templates/selected_product.html
+++ b/app/templates/selected_product.html
@@ -28,7 +28,7 @@
                 <h4>${{ product.price }}</h4>
                 <p>{{ product.description }}</p>
             </div>
-            <button class="btn btn-primary btn-lg" type="button"> Add to Cart</button>
+            <button class="btn btn-col-secondary btn-lg" type="button"> Add to Cart</button>
         </div>
     </div>
 
