--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,12 +6,13 @@
 <div class="p-5 mb-4 bg-light rounded-3 border text-center">
   <div class="container-fluid py-5 ">
     <h1 class="display-5 fw-bold">The Watch Shop</h1>
-    <p class = "fs-4 ">Akiel Walsh</p>
+    <p class = "fs-3 ">Akiel Walsh</p>
 
     <img src="{{ url_for('static', filename='images/pic2.jpg') }}" alt="Akiel Walsh" width="200" height="200" class = "rounded-circle">
+    <!-- <img src="{{ url_for('static', filename='images/Team Image.jpg') }}" alt="Team Logo" width="200" height="200" class = "rounded-square"> -->
 
-    <p class = "fs-4 ">Team: The Focal Point</p>
-    <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href='/products'">View Products</button>
+    <p class = "fs-3 ">Team: The Focal Point</p>
+    <button class="btn btn-col-secondary btn-lg" type="button" onclick="window.location.href='/products'">View Products</button>
 
   </div>
 </div>
